// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Select.Basic does not filter when filterOption value is false 1`] = `
<div
  class="rc-select-dropdown rc-select-dropdown-placement-bottomLeft"
  style="--arrow-x: 0px; --arrow-y: 0px; left: -1000vw; top: -1000vh; box-sizing: border-box;"
>
  <div>
    <div
      id="rc_select_TEST_OR_SSR_list"
      role="listbox"
      style="height: 0px; width: 0px; overflow: hidden;"
    >
      <div
        aria-label="1"
        aria-selected="false"
        id="rc_select_TEST_OR_SSR_list_0"
        role="option"
      >
        1
      </div>
      <div
        aria-label="2"
        aria-selected="false"
        id="rc_select_TEST_OR_SSR_list_1"
        role="option"
      >
        2
      </div>
    </div>
    <div
      class="rc-virtual-list"
      style="position: relative;"
    >
      <div
        class="rc-virtual-list-holder"
        style="max-height: 200px; overflow-y: auto;"
      >
        <div>
          <div
            class="rc-virtual-list-holder-inner"
            style="display: flex; flex-direction: column;"
          >
            <div
              aria-selected="false"
              class="rc-select-item rc-select-item-option rc-select-item-option-active"
              title="1"
            >
              <div
                class="rc-select-item-option-content"
              >
                1
              </div>
              <span
                aria-hidden="true"
                class="rc-select-item-option-state"
                style="user-select: none;"
                unselectable="on"
              >
                <span
                  class="rc-select-item-option-state-icon"
                />
              </span>
            </div>
            <div
              aria-selected="false"
              class="rc-select-item rc-select-item-option"
              title="2"
            >
              <div
                class="rc-select-item-option-content"
              >
                2
              </div>
              <span
                aria-hidden="true"
                class="rc-select-item-option-state"
                style="user-select: none;"
                unselectable="on"
              >
                <span
                  class="rc-select-item-option-state-icon"
                />
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Select.Basic filterOption could be true as described in default value 1`] = `
<div
  class="rc-select-dropdown rc-select-dropdown-empty rc-select-dropdown-placement-bottomLeft"
  style="--arrow-x: 0px; --arrow-y: 0px; left: -1000vw; top: -1000vh; box-sizing: border-box;"
>
  <div>
    <div
      class="rc-select-item-empty"
      id="rc_select_TEST_OR_SSR_list"
      role="listbox"
    >
      Not Found
    </div>
  </div>
</div>
`;

exports[`Select.Basic no search 1`] = `
<div
  class="rc-select rc-select-single"
>
  <div
    class="rc-select-selector"
  >
    <span
      class="rc-select-selection-search"
    >
      <input
        aria-autocomplete="list"
        aria-controls="rc_select_TEST_OR_SSR_list"
        aria-expanded="false"
        aria-haspopup="listbox"
        aria-owns="rc_select_TEST_OR_SSR_list"
        autocomplete="off"
        class="rc-select-selection-search-input"
        id="rc_select_TEST_OR_SSR"
        readonly=""
        role="combobox"
        style="opacity: 0;"
        type="search"
        unselectable="on"
        value=""
      />
    </span>
    <span
      class="rc-select-selection-item"
      title="1"
    >
      1
    </span>
  </div>
</div>
`;

exports[`Select.Basic render renders aria-attributes correctly 1`] = `
<div
  aria-label="some-label"
  aria-labelledby="test-id"
  class="antd select-test antd-single antd-allow-clear antd-show-search"
>
  <div
    class="antd-selector"
  >
    <span
      class="antd-selection-search"
    >
      <input
        aria-autocomplete="list"
        aria-controls="rc_select_TEST_OR_SSR_list"
        aria-expanded="false"
        aria-haspopup="listbox"
        aria-label="some-label"
        aria-labelledby="test-id"
        aria-owns="rc_select_TEST_OR_SSR_list"
        autocomplete="off"
        class="antd-selection-search-input"
        id="rc_select_TEST_OR_SSR"
        role="combobox"
        type="search"
        value=""
      />
    </span>
    <span
      class="antd-selection-item"
      title="2"
    >
      2
    </span>
  </div>
  <span
    aria-hidden="true"
    class="antd-clear"
    style="user-select: none;"
    unselectable="on"
  >
    <span
      class="antd-clear-icon"
    >
      ×
    </span>
  </span>
</div>
`;

exports[`Select.Basic render renders correctly 1`] = `
<div
  class="antd select-test antd-single antd-allow-clear antd-show-search"
>
  <div
    class="antd-selector"
  >
    <span
      class="antd-selection-search"
    >
      <input
        aria-autocomplete="list"
        aria-controls="rc_select_TEST_OR_SSR_list"
        aria-expanded="false"
        aria-haspopup="listbox"
        aria-owns="rc_select_TEST_OR_SSR_list"
        autocomplete="off"
        class="antd-selection-search-input"
        id="rc_select_TEST_OR_SSR"
        role="combobox"
        type="search"
        value=""
      />
    </span>
    <span
      class="antd-selection-item"
      title="2"
    >
      2
    </span>
  </div>
  <span
    aria-hidden="true"
    class="antd-clear"
    style="user-select: none;"
    unselectable="on"
  >
    <span
      class="antd-clear-icon"
    >
      ×
    </span>
  </span>
</div>
`;

exports[`Select.Basic render renders data-attributes correctly 1`] = `
<div
  class="antd select-test antd-single antd-allow-clear antd-show-search"
  data-id="12345"
  data-test="test-id"
>
  <div
    class="antd-selector"
  >
    <span
      class="antd-selection-search"
    >
      <input
        aria-autocomplete="list"
        aria-controls="rc_select_TEST_OR_SSR_list"
        aria-expanded="false"
        aria-haspopup="listbox"
        aria-owns="rc_select_TEST_OR_SSR_list"
        autocomplete="off"
        class="antd-selection-search-input"
        id="rc_select_TEST_OR_SSR"
        role="combobox"
        type="search"
        value=""
      />
    </span>
    <span
      class="antd-selection-item"
      title="2"
    >
      2
    </span>
  </div>
  <span
    aria-hidden="true"
    class="antd-clear"
    style="user-select: none;"
    unselectable="on"
  >
    <span
      class="antd-clear-icon"
    >
      ×
    </span>
  </span>
</div>
`;

exports[`Select.Basic render renders disabled select correctly 1`] = `
<div
  class="antd select-test antd-single antd-allow-clear antd-disabled antd-show-search"
>
  <div
    class="antd-selector"
  >
    <span
      class="antd-selection-search"
    >
      <input
        aria-autocomplete="list"
        aria-controls="rc_select_TEST_OR_SSR_list"
        aria-expanded="false"
        aria-haspopup="listbox"
        aria-owns="rc_select_TEST_OR_SSR_list"
        autocomplete="off"
        class="antd-selection-search-input"
        disabled=""
        id="rc_select_TEST_OR_SSR"
        role="combobox"
        type="search"
        value=""
      />
    </span>
    <span
      class="antd-selection-item"
      title="2"
    >
      2
    </span>
  </div>
</div>
`;

exports[`Select.Basic render renders dropdown correctly 1`] = `null`;

exports[`Select.Basic render renders role prop correctly 1`] = `
<div
  class="antd select-test antd-single antd-allow-clear antd-show-search"
  role="button"
>
  <div
    class="antd-selector"
  >
    <span
      class="antd-selection-search"
    >
      <input
        aria-autocomplete="list"
        aria-controls="rc_select_TEST_OR_SSR_list"
        aria-expanded="false"
        aria-haspopup="listbox"
        aria-owns="rc_select_TEST_OR_SSR_list"
        autocomplete="off"
        class="antd-selection-search-input"
        id="rc_select_TEST_OR_SSR"
        role="button"
        type="search"
        value=""
      />
    </span>
    <span
      class="antd-selection-item"
      title="2"
    >
      2
    </span>
  </div>
  <span
    aria-hidden="true"
    class="antd-clear"
    style="user-select: none;"
    unselectable="on"
  >
    <span
      class="antd-clear-icon"
    >
      ×
    </span>
  </span>
</div>
`;

exports[`Select.Basic render should support fieldName 1`] = `
<div
  class="rc-virtual-list"
  style="position: relative;"
>
  <div
    class="rc-virtual-list-holder"
    style="max-height: 200px; overflow-y: auto;"
  >
    <div>
      <div
        class="rc-virtual-list-holder-inner"
        style="display: flex; flex-direction: column;"
      >
        <div
          class="rc-select-item rc-select-item-group"
          title="groupLabel"
        >
          groupLabel
        </div>
        <div
          aria-selected="false"
          class="rc-select-item rc-select-item-option rc-select-item-option-grouped rc-select-item-option-active"
          title="label"
        >
          <div
            class="rc-select-item-option-content"
          >
            label
          </div>
          <span
            aria-hidden="true"
            class="rc-select-item-option-state"
            style="user-select: none;"
            unselectable="on"
          >
            <span
              class="rc-select-item-option-state-icon"
            />
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Select.Basic render should support fieldName 2`] = `
<div
  class="rc-virtual-list"
  style="position: relative;"
>
  <div
    class="rc-virtual-list-holder"
    style="max-height: 200px; overflow-y: auto;"
  >
    <div>
      <div
        class="rc-virtual-list-holder-inner"
        style="display: flex; flex-direction: column;"
      >
        <div
          class="rc-select-item rc-select-item-group"
          title="groupLabel"
        >
          groupLabel
        </div>
        <div
          aria-selected="false"
          class="rc-select-item rc-select-item-option rc-select-item-option-grouped rc-select-item-option-active"
          title="label"
        >
          <div
            class="rc-select-item-option-content"
          >
            label
          </div>
          <span
            aria-hidden="true"
            class="rc-select-item-option-state"
            style="user-select: none;"
            unselectable="on"
          >
            <span
              class="rc-select-item-option-state-icon"
            />
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Select.Basic render should support fieldName 3`] = `
<div
  class="rc-virtual-list"
  style="position: relative;"
>
  <div
    class="rc-virtual-list-holder"
    style="max-height: 200px; overflow-y: auto;"
  >
    <div>
      <div
        class="rc-virtual-list-holder-inner"
        style="display: flex; flex-direction: column;"
      >
        <div
          class="rc-select-item rc-select-item-group"
          title="groupLabel"
        >
          groupLabel
        </div>
        <div
          aria-selected="false"
          class="rc-select-item rc-select-item-option rc-select-item-option-grouped rc-select-item-option-active"
          title="label"
        >
          <div
            class="rc-select-item-option-content"
          >
            label
          </div>
          <span
            aria-hidden="true"
            class="rc-select-item-option-state"
            style="user-select: none;"
            unselectable="on"
          >
            <span
              class="rc-select-item-option-state-icon"
            />
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Select.Basic should contain falsy children 1`] = `
<div
  class="rc-select-dropdown rc-select-dropdown-placement-bottomLeft"
  style="--arrow-x: 0px; --arrow-y: 0px; left: -1000vw; top: -1000vh; box-sizing: border-box;"
>
  <div>
    <div
      id="rc_select_TEST_OR_SSR_list"
      role="listbox"
      style="height: 0px; width: 0px; overflow: hidden;"
    >
      <div
        aria-label="1"
        aria-selected="true"
        id="rc_select_TEST_OR_SSR_list_0"
        role="option"
      >
        1
      </div>
      <div
        aria-label="2"
        aria-selected="false"
        id="rc_select_TEST_OR_SSR_list_1"
        role="option"
      >
        2
      </div>
    </div>
    <div
      class="rc-virtual-list"
      style="position: relative;"
    >
      <div
        class="rc-virtual-list-holder"
        style="max-height: 200px; overflow-y: auto;"
      >
        <div>
          <div
            class="rc-virtual-list-holder-inner"
            style="display: flex; flex-direction: column;"
          >
            <div
              aria-selected="true"
              class="rc-select-item rc-select-item-option rc-select-item-option-active rc-select-item-option-selected"
              title="1"
            >
              <div
                class="rc-select-item-option-content"
              >
                1
              </div>
              <span
                aria-hidden="true"
                class="rc-select-item-option-state"
                style="user-select: none;"
                unselectable="on"
              >
                <span
                  class="rc-select-item-option-state-icon"
                >
                  ✓
                </span>
              </span>
            </div>
            <div
              aria-selected="false"
              class="rc-select-item rc-select-item-option"
              title="2"
            >
              <div
                class="rc-select-item-option-content"
              >
                2
              </div>
              <span
                aria-hidden="true"
                class="rc-select-item-option-state"
                style="user-select: none;"
                unselectable="on"
              >
                <span
                  class="rc-select-item-option-state-icon"
                />
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Select.Basic should render custom dropdown correctly 1`] = `
<div
  class="rc-select-dropdown rc-select-dropdown-placement-bottomLeft"
  style="--arrow-x: 0px; --arrow-y: 0px; left: -1000vw; top: -1000vh; box-sizing: border-box;"
>
  <div>
    <div>
      <div
        class="dropdown-custom-node"
      >
        CUSTOM NODE
      </div>
      <div
        id="rc_select_TEST_OR_SSR_list"
        role="listbox"
        style="height: 0px; width: 0px; overflow: hidden;"
      >
        <div
          aria-label="1"
          aria-selected="false"
          id="rc_select_TEST_OR_SSR_list_0"
          role="option"
        >
          1
        </div>
        <div
          aria-label="2"
          aria-selected="false"
          id="rc_select_TEST_OR_SSR_list_1"
          role="option"
        >
          2
        </div>
      </div>
      <div
        class="rc-virtual-list"
        style="position: relative;"
      >
        <div
          class="rc-virtual-list-holder"
          style="max-height: 200px; overflow-y: auto;"
        >
          <div>
            <div
              class="rc-virtual-list-holder-inner"
              style="display: flex; flex-direction: column;"
            >
              <div
                aria-selected="false"
                class="rc-select-item rc-select-item-option rc-select-item-option-active"
                title="1"
              >
                <div
                  class="rc-select-item-option-content"
                >
                  1
                </div>
                <span
                  aria-hidden="true"
                  class="rc-select-item-option-state"
                  style="user-select: none;"
                  unselectable="on"
                >
                  <span
                    class="rc-select-item-option-state-icon"
                  />
                </span>
              </div>
              <div
                aria-selected="false"
                class="rc-select-item rc-select-item-option"
                title="2"
              >
                <div
                  class="rc-select-item-option-content"
                >
                  2
                </div>
                <span
                  aria-hidden="true"
                  class="rc-select-item-option-state"
                  style="user-select: none;"
                  unselectable="on"
                >
                  <span
                    class="rc-select-item-option-state-icon"
                  />
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
